update reaction story, add typing animation for chat box, change avatar assistant

--- a/app/src/main/res/layout/activity_chatbox.xml
+++ b/app/src/main/res/layout/activity_chatbox.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:src="@drawable/assistant_face"
+            android:src="@drawable/mascot"
             android:layout_gravity="center_vertical" />
 
         <LinearLayout
