--- a/app/src/main/res/layout/layout_story_user.xml
+++ b/app/src/main/res/layout/layout_story_user.xml
@@ -123,7 +123,7 @@ android:background="#fff">
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/viewers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -141,9 +141,9 @@ android:background="#fff">
         android:text="TextView"
         android:textSize="15sp"
         android:textColor="#000000"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
-        app:layout_constraintStart_toEndOf="@+id/imageButton"
-        app:layout_constraintTop_toTopOf="@+id/imageButton" />
+        app:layout_constraintBottom_toBottomOf="@+id/viewers"
+        app:layout_constraintStart_toEndOf="@+id/viewers"
+        app:layout_constraintTop_toTopOf="@+id/viewers" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
