--- a/app/src/main/res/layout/dialog_layout_viewer.xml
+++ b/app/src/main/res/layout/dialog_layout_viewer.xml
@@ -5,9 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_gravity="center_vertical"
-    android:padding="20dp"
+    android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/avatarViewer"
         android:layout_width="50dp"
@@ -21,7 +22,7 @@
     <TextView
         android:id="@+id/nameViewer"
         android:layout_width="wrap_content"
-        android:layout_height="25dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginVertical="10dp"
         android:fontFamily="@font/kufam_bold"
